Lab2/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_or_empty
Rule 2     instructions_or_empty -> <empty>
Rule 3     instructions_or_empty -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> print_i ;
Rule 8     instruction -> assign ;
Rule 9     instruction -> while_l
Rule 10    instruction -> for_l
Rule 11    instruction -> CONTINUE ;
Rule 12    instruction -> BREAK ;
Rule 13    instruction -> return_i ;
Rule 14    instruction -> if_i
Rule 15    if_i -> IF ( expr ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 16    if_i -> IF ( expr ) instruction  [precedence=nonassoc, level=1]
Rule 17    while_l -> WHILE ( expr ) instruction
Rule 18    for_l -> FOR ID = expr : expr instruction
Rule 19    return_i -> RETURN expr
Rule 20    return_i -> RETURN
Rule 21    print_i -> PRINT printargs
Rule 22    printargs -> expr
Rule 23    printargs -> expr , printargs
Rule 24    expr -> mat_fun ( expr )
Rule 25    expr -> matrix
Rule 26    expr -> expr DOTMINUS expr  [precedence=left, level=4]
Rule 27    expr -> expr DOTPLUS expr  [precedence=left, level=4]
Rule 28    expr -> expr DOTDIVIDE expr  [precedence=left, level=5]
Rule 29    expr -> expr DOTTIMES expr  [precedence=left, level=5]
Rule 30    expr -> expr GE expr  [precedence=nonassoc, level=3]
Rule 31    expr -> expr LE expr  [precedence=nonassoc, level=3]
Rule 32    expr -> expr GT expr  [precedence=nonassoc, level=3]
Rule 33    expr -> expr LT expr  [precedence=nonassoc, level=3]
Rule 34    expr -> expr NE expr  [precedence=nonassoc, level=3]
Rule 35    expr -> expr EQ expr  [precedence=nonassoc, level=3]
Rule 36    expr -> expr / expr  [precedence=left, level=5]
Rule 37    expr -> expr * expr  [precedence=left, level=5]
Rule 38    expr -> expr - expr  [precedence=left, level=4]
Rule 39    expr -> expr + expr  [precedence=left, level=4]
Rule 40    expr -> expr '  [precedence=left, level=6]
Rule 41    expr -> - expr  [precedence=left, level=7]
Rule 42    expr -> STRING
Rule 43    expr -> FLOAT
Rule 44    expr -> INT
Rule 45    expr -> ( expr )
Rule 46    expr -> var
Rule 47    var -> lists
Rule 48    var -> ID
Rule 49    lists -> ID [ expr , expr ]
Rule 50    assign -> var DIVIDEASSIGN expr
Rule 51    assign -> var TIMESASSIGN expr
Rule 52    assign -> var MINUSASSIGN expr
Rule 53    assign -> var PLUSASSIGN expr
Rule 54    assign -> var = expr
Rule 55    matrix -> [ vectors ]
Rule 56    vectors -> vector
Rule 57    vectors -> vectors , vector
Rule 58    vector -> [ variables ]
Rule 59    variables -> variable
Rule 60    variables -> variables , variable
Rule 61    variable -> expr
Rule 62    mat_fun -> ONES
Rule 63    mat_fun -> EYE
Rule 64    mat_fun -> ZEROS

Terminals, with rules where they appear:

'                    : 40
(                    : 15 16 17 24 45
)                    : 15 16 17 24 45
*                    : 37
+                    : 39
,                    : 23 49 57 60
-                    : 38 41
/                    : 36
:                    : 18
;                    : 7 8 11 12 13
=                    : 18 54
BREAK                : 12
CONTINUE             : 11
DIVIDEASSIGN         : 50
DOTDIVIDE            : 28
DOTMINUS             : 26
DOTPLUS              : 27
DOTTIMES             : 29
ELSE                 : 15
EQ                   : 35
EYE                  : 63
FLOAT                : 43
FOR                  : 18
GE                   : 30
GT                   : 32
ID                   : 18 48 49
IF                   : 15 16
INT                  : 44
LE                   : 31
LT                   : 33
MINUSASSIGN          : 52
NE                   : 34
ONES                 : 62
PLUSASSIGN           : 53
PRINT                : 21
RETURN               : 19 20
STRING               : 42
TIMESASSIGN          : 51
WHILE                : 17
ZEROS                : 64
[                    : 49 55 58
]                    : 49 55 58
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear:

assign               : 8
expr                 : 15 16 17 18 18 19 22 23 24 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 45 49 49 50 51 52 53 54 61
for_l                : 10
if_i                 : 14
instruction          : 4 5 15 15 16 17 18
instructions         : 3 5 6
instructions_or_empty : 1
lists                : 47
mat_fun              : 24
matrix               : 25
print_i              : 7
printargs            : 21 23
program              : 0
return_i             : 13
var                  : 46 50 51 52 53 54
variable             : 59 60
variables            : 58 60
vector               : 56 57
vectors              : 55 57
while_l              : 9


state 0

    (0) S' -> . program
    (1) program -> . instructions_or_empty
    (2) instructions_or_empty -> .
    (3) instructions_or_empty -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (21) print_i -> . PRINT printargs
    (50) assign -> . var DIVIDEASSIGN expr
    (51) assign -> . var TIMESASSIGN expr
    (52) assign -> . var MINUSASSIGN expr
    (53) assign -> . var PLUSASSIGN expr
    (54) assign -> . var = expr
    (17) while_l -> . WHILE ( expr ) instruction
    (18) for_l -> . FOR ID = expr : expr instruction
    (19) return_i -> . RETURN expr
    (20) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE instruction
    (16) if_i -> . IF ( expr ) instruction
    (47) var -> . lists
    (48) var -> . ID
    (49) lists -> . ID [ expr , expr ]
    $end            reduce using rule 2 (instructions_or_empty -> .)
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions_or_empty          shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    lists                          shift and go to state 21

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_or_empty .
    $end            reduce using rule 1 (program -> instructions_or_empty .)


state 3

    (3) instructions_or_empty -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (21) print_i -> . PRINT printargs
    (50) assign -> . var DIVIDEASSIGN expr
    (51) assign -> . var TIMESASSIGN expr
    (52) assign -> . var MINUSASSIGN expr
    (53) assign -> . var PLUSASSIGN expr
    (54) assign -> . var = expr
    (17) while_l -> . WHILE ( expr ) instruction
    (18) for_l -> . FOR ID = expr : expr instruction
    (19) return_i -> . RETURN expr
    (20) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE instruction
    (16) if_i -> . IF ( expr ) instruction
    (47) var -> . lists
    (48) var -> . ID
    (49) lists -> . ID [ expr , expr ]
    $end            reduce using rule 3 (instructions_or_empty -> instructions .)
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 22
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    lists                          shift and go to state 21

state 4

    (4) instructions -> instruction .
    {               reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (21) print_i -> . PRINT printargs
    (50) assign -> . var DIVIDEASSIGN expr
    (51) assign -> . var TIMESASSIGN expr
    (52) assign -> . var MINUSASSIGN expr
    (53) assign -> . var PLUSASSIGN expr
    (54) assign -> . var = expr
    (17) while_l -> . WHILE ( expr ) instruction
    (18) for_l -> . FOR ID = expr : expr instruction
    (19) return_i -> . RETURN expr
    (20) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE instruction
    (16) if_i -> . IF ( expr ) instruction
    (47) var -> . lists
    (48) var -> . ID
    (49) lists -> . ID [ expr , expr ]
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instructions                   shift and go to state 23
    instruction                    shift and go to state 4
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    lists                          shift and go to state 21

state 6

    (7) instruction -> print_i . ;
    ;               shift and go to state 24


state 7

    (8) instruction -> assign . ;
    ;               shift and go to state 25


state 8

    (9) instruction -> while_l .
    {               reduce using rule 9 (instruction -> while_l .)
    CONTINUE        reduce using rule 9 (instruction -> while_l .)
    BREAK           reduce using rule 9 (instruction -> while_l .)
    PRINT           reduce using rule 9 (instruction -> while_l .)
    WHILE           reduce using rule 9 (instruction -> while_l .)
    FOR             reduce using rule 9 (instruction -> while_l .)
    RETURN          reduce using rule 9 (instruction -> while_l .)
    IF              reduce using rule 9 (instruction -> while_l .)
    ID              reduce using rule 9 (instruction -> while_l .)
    $end            reduce using rule 9 (instruction -> while_l .)
    }               reduce using rule 9 (instruction -> while_l .)
    ELSE            reduce using rule 9 (instruction -> while_l .)


state 9

    (10) instruction -> for_l .
    {               reduce using rule 10 (instruction -> for_l .)
    CONTINUE        reduce using rule 10 (instruction -> for_l .)
    BREAK           reduce using rule 10 (instruction -> for_l .)
    PRINT           reduce using rule 10 (instruction -> for_l .)
    WHILE           reduce using rule 10 (instruction -> for_l .)
    FOR             reduce using rule 10 (instruction -> for_l .)
    RETURN          reduce using rule 10 (instruction -> for_l .)
    IF              reduce using rule 10 (instruction -> for_l .)
    ID              reduce using rule 10 (instruction -> for_l .)
    $end            reduce using rule 10 (instruction -> for_l .)
    }               reduce using rule 10 (instruction -> for_l .)
    ELSE            reduce using rule 10 (instruction -> for_l .)


state 10

    (11) instruction -> CONTINUE . ;
    ;               shift and go to state 26


state 11

    (12) instruction -> BREAK . ;
    ;               shift and go to state 27


state 12

    (13) instruction -> return_i . ;
    ;               shift and go to state 28


state 13

    (14) instruction -> if_i .
    {               reduce using rule 14 (instruction -> if_i .)
    CONTINUE        reduce using rule 14 (instruction -> if_i .)
    BREAK           reduce using rule 14 (instruction -> if_i .)
    PRINT           reduce using rule 14 (instruction -> if_i .)
    WHILE           reduce using rule 14 (instruction -> if_i .)
    FOR             reduce using rule 14 (instruction -> if_i .)
    RETURN          reduce using rule 14 (instruction -> if_i .)
    IF              reduce using rule 14 (instruction -> if_i .)
    ID              reduce using rule 14 (instruction -> if_i .)
    $end            reduce using rule 14 (instruction -> if_i .)
    }               reduce using rule 14 (instruction -> if_i .)
    ELSE            reduce using rule 14 (instruction -> if_i .)


state 14

    (21) print_i -> PRINT . printargs
    (22) printargs -> . expr
    (23) printargs -> . expr , printargs
    (24) expr -> . mat_fun ( expr )
    (25) expr -> . matrix
    (26) expr -> . expr DOTMINUS expr
    (27) expr -> . expr DOTPLUS expr
    (28) expr -> . expr DOTDIVIDE expr
    (29) expr -> . expr DOTTIMES expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr LE expr
    (32) expr -> . expr GT expr
    (33) expr -> . expr LT expr
    (34) expr -> . expr NE expr
    (35) expr -> . expr EQ expr
    (36) expr -> . expr / expr
    (37) expr -> . expr * expr
    (38) expr -> . expr - expr
    (39) expr -> . expr + expr
    (40) expr -> . expr '
    (41) expr -> . - expr
    (42) expr -> . STRING
    (43) expr -> . FLOAT
    (44) expr -> . INT
    (45) expr -> . ( expr )
    (46) expr -> . var
    (62) mat_fun -> . ONES
    (63) mat_fun -> . EYE
    (64) mat_fun -> . ZEROS
    (55) matrix -> . [ vectors ]
    (47) var -> . lists
    (48) var -> . ID
    (49) lists -> . ID [ expr , expr ]
    -               shift and go to state 34
    STRING          shift and go to state 35
    FLOAT           shift and go to state 36
    INT             shift and go to state 37
    (               shift and go to state 32
    ONES            shift and go to state 39
    EYE             shift and go to state 40
    ZEROS           shift and go to state 41
    [               shift and go to state 42
    ID              shift and go to state 18

    printargs                      shift and go to state 29
    expr                           shift and go to state 30
    mat_fun                        shift and go to state 31
    matrix                         shift and go to state 33
    var                            shift and go to state 38
    lists                          shift and go to state 21

state 15

    (50) assign -> var . DIVIDEASSIGN expr
    (51) assign -> var . TIMESASSIGN expr
    (52) assign -> var . MINUSASSIGN expr
    (53) assign -> var . PLUSASSIGN expr
    (54) assign -> var . = expr
    DIVIDEASSIGN    shift and go to state 43
    TIMESASSIGN     shift and go to state 44
    MINUSASSIGN     shift and go to state 45
    PLUSASSIGN      shift and go to state 46
    =               shift and go to state 47


state 16

    (17) while_l -> WHILE . ( expr ) instruction
    (               shift and go to state 48


state 17

    (18) for_l -> FOR . ID = expr : expr instruction
    ID              shift and go to state 49


state 18

    (48) var -> ID .
    (49) lists -> ID . [ expr , expr ]
    DIVIDEASSIGN    reduce using rule 48 (var -> ID .)
    TIMESASSIGN     reduce using rule 48 (var -> ID .)
    MINUSASSIGN     reduce using rule 48 (var -> ID .)
    PLUSASSIGN      reduce using rule 48 (var -> ID .)
    =               reduce using rule 48 (var -> ID .)
    ,               reduce using rule 48 (var -> ID .)
    DOTMINUS        reduce using rule 48 (var -> ID .)
    DOTPLUS         reduce using rule 48 (var -> ID .)
    DOTDIVIDE       reduce using rule 48 (var -> ID .)
    DOTTIMES        reduce using rule 48 (var -> ID .)
    GE              reduce using rule 48 (var -> ID .)
    LE              reduce using rule 48 (var -> ID .)
    GT              reduce using rule 48 (var -> ID .)
    LT              reduce using rule 48 (var -> ID .)
    NE              reduce using rule 48 (var -> ID .)
    EQ              reduce using rule 48 (var -> ID .)
    /               reduce using rule 48 (var -> ID .)
    *               reduce using rule 48 (var -> ID .)
    -               reduce using rule 48 (var -> ID .)
    +               reduce using rule 48 (var -> ID .)
    '               reduce using rule 48 (var -> ID .)
    ;               reduce using rule 48 (var -> ID .)
    )               reduce using rule 48 (var -> ID .)
    ]               reduce using rule 48 (var -> ID .)
    :               reduce using rule 48 (var -> ID .)
    {               reduce using rule 48 (var -> ID .)
    CONTINUE        reduce using rule 48 (var -> ID .)
    BREAK           reduce using rule 48 (var -> ID .)
    PRINT           reduce using rule 48 (var -> ID .)
    WHILE           reduce using rule 48 (var -> ID .)
    FOR             reduce using rule 48 (var -> ID .)
    RETURN          reduce using rule 48 (var -> ID .)
    IF              reduce using rule 48 (var -> ID .)
    ID              reduce using rule 48 (var -> ID .)
    [               shift and go to state 50


state 19

    (19) return_i -> RETURN . expr
    (20) return_i -> RETURN .
    (24) expr -> . mat_fun ( expr )
    (25) expr -> . matrix
    (26) expr -> . expr DOTMINUS expr
    (27) expr -> . expr DOTPLUS expr
    (28) expr -> . expr DOTDIVIDE expr
    (29) expr -> . expr DOTTIMES expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr LE expr
    (32) expr -> . expr GT expr
    (33) expr -> . expr LT expr
    (34) expr -> . expr NE expr
    (35) expr -> . expr EQ expr
    (36) expr -> . expr / expr
    (37) expr -> . expr * expr
    (38) expr -> . expr - expr
    (39) expr -> . expr + expr
    (40) expr -> . expr '
    (41) expr -> . - expr
    (42) expr -> . STRING
    (43) expr -> . FLOAT
    (44) expr -> . INT
    (45) expr -> . ( expr )
    (46) expr -> . var
    (62) mat_fun -> . ONES
    (63) mat_fun -> . EYE
    (64) mat_fun -> . ZEROS
    (55) matrix -> . [ vectors ]
    (47) var -> . lists
    (48) var -> . ID
    (49) lists -> . ID [ expr , expr ]
    ;               reduce using rule 20 (return_i -> RETURN .)
    -               shift and go to state 34
    STRING          shift and go to state 35
    FLOAT           shift and go to state 36
    INT             shift and go to state 37
    (               shift and go to state 32
    ONES            shift and go to state 39
    EYE             shift and go to state 40
    ZEROS           shift and go to state 41
    [               shift and go to state 42
    ID              shift and go to state 18

    expr                           shift and go to state 51
    mat_fun                        shift and go to state 31
    matrix                         shift and go to state 33
    var                            shift and go to state 38
    lists                          shift and go to state 21

state 20

    (15) if_i -> IF . ( expr ) instruction ELSE instruction
    (16) if_i -> IF . ( expr ) instruction
    (               shift and go to state 52


state 21

    (47) var -> lists .
    DIVIDEASSIGN    reduce using rule 47 (var -> lists .)
    TIMESASSIGN     reduce using rule 47 (var -> lists .)
    MINUSASSIGN     reduce using rule 47 (var -> lists .)
    PLUSASSIGN      reduce using rule 47 (var -> lists .)
    =               reduce using rule 47 (var -> lists .)
    ,               reduce using rule 47 (var -> lists .)
    DOTMINUS        reduce using rule 47 (var -> lists .)
    DOTPLUS         reduce using rule 47 (var -> lists .)
    DOTDIVIDE       reduce using rule 47 (var -> lists .)
    DOTTIMES        reduce using rule 47 (var -> lists .)
    GE              reduce using rule 47 (var -> lists .)
    LE              reduce using rule 47 (var -> lists .)
    GT              reduce using rule 47 (var -> lists .)
    LT              reduce using rule 47 (var -> lists .)
    NE              reduce using rule 47 (var -> lists .)
    EQ              reduce using rule 47 (var -> lists .)
    /               reduce using rule 47 (var -> lists .)
    *               reduce using rule 47 (var -> lists .)
    -               reduce using rule 47 (var -> lists .)
    +               reduce using rule 47 (var -> lists .)
    '               reduce using rule 47 (var -> lists .)
    ;               reduce using rule 47 (var -> lists .)
    )               reduce using rule 47 (var -> lists .)
    ]               reduce using rule 47 (var -> lists .)
    :               reduce using rule 47 (var -> lists .)
    {               reduce using rule 47 (var -> lists .)
    CONTINUE        reduce using rule 47 (var -> lists .)
    BREAK           reduce using rule 47 (var -> lists .)
    PRINT           reduce using rule 47 (var -> lists .)
    WHILE           reduce using rule 47 (var -> lists .)
    FOR             reduce using rule 47 (var -> lists .)
    RETURN          reduce using rule 47 (var -> lists .)
    IF              reduce using rule 47 (var -> lists .)
    ID              reduce using rule 47 (var -> lists .)


state 22

    (5) instructions -> instructions instruction .
    {               reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 23

    (6) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . print_i ;
    (8) instruction -> . assign ;
    (9) instruction -> . while_l
    (10) instruction -> . for_l
    (11) instruction -> . CONTINUE ;
    (12) instruction -> . BREAK ;
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (21) print_i -> . PRINT printargs
    (50) assign -> . var DIVIDEASSIGN expr
    (51) assign -> . var TIMESASSIGN expr
    (52) assign -> . var MINUSASSIGN expr
    (53) assign -> . var PLUSASSIGN expr
    (54) assign -> . var = expr
    (17) while_l -> . WHILE ( expr ) instruction
    (18) for_l -> . FOR ID = expr : expr instruction
    (19) return_i -> . RETURN expr
    (20) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE instruction
    (16) if_i -> . IF ( expr ) instruction
    (47) var -> . lists
    (48) var -> . ID
    (49) lists -> . ID [ expr , expr ]
    }               shift and go to state 53
    {               shift and go to state 5
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 22
    print_i                        shift and go to state 6
    assign                         shift and go to state 7
    while_l                        shift and go to state 8
    for_l                          shift and go to state 9
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    lists                          shift and go to state 21

state 24

    (7) instruction -> print_i ; .
    {               reduce using rule 7 (instruction -> print_i ; .)
    CONTINUE        reduce using rule 7 (instruction -> print_i ; .)
    BREAK           reduce using rule 7 (instruction -> print_i ; .)
    PRINT           reduce using rule 7 (instruction -> print_i ; .)
    WHILE           reduce using rule 7 (instruction -> print_i ; .)
    FOR             reduce using rule 7 (instruction -> print_i ; .)
    RETURN          reduce using rule 7 (instruction -> print_i ; .)
    IF              reduce using rule 7 (instruction -> print_i ; .)
    ID              reduce using rule 7 (instruction -> print_i ; .)
    $end            reduce using rule 7 (instruction -> print_i ; .)
    }               reduce using rule 7 (instruction -> print_i ; .)
    ELSE            reduce using rule 7 (instruction -> print_i ; .)


state 25

    (8) instruction -> assign ; .
    {               reduce using rule 8 (instruction -> assign ; .)
    CONTINUE        reduce using rule 8 (instruction -> assign ; .)
    BREAK           reduce using rule 8 (instruction -> assign ; .)
    PRINT           reduce using rule 8 (instruction -> assign ; .)
    WHILE           reduce using rule 8 (instruction -> assign ; .)
    FOR             reduce using rule 8 (instruction -> assign ; .)
    RETURN          reduce using rule 8 (instruction -> assign ; .)
    IF              reduce using rule 8 (instruction -> assign ; .)
    ID              reduce using rule 8 (instruction -> assign ; .)
    $end            reduce using rule 8 (instruction -> assign ; .)
    }               reduce using rule 8 (instruction -> assign ; .)
    ELSE            reduce using rule 8 (instruction -> assign ; .)


state 26

    (11) instruction -> CONTINUE ; .
    {               reduce using rule 11 (instruction -> CONTINUE ; .)
    CONTINUE        reduce using rule 11 (instruction -> CONTINUE ; .)
    BREAK           reduce using rule 11 (instruction -> CONTINUE ; .)
    PRINT           reduce using rule 11 (instruction -> CONTINUE ; .)
    WHILE           reduce using rule 11 (instruction -> CONTINUE ; .)
    FOR             reduce using rule 11 (instruction -> CONTINUE ; .)
    RETURN          reduce using rule 11 (instruction -> CONTINUE ; .)
    IF              reduce using rule 11 (instruction -> CONTINUE ; .)
    ID              reduce using rule 11 (instruction -> CONTINUE ; .)
    $end            reduce using rule 11 (instruction -> CONTINUE ; .)
    }               reduce using rule 11 (instruction -> CONTINUE ; .)
    ELSE            reduce using rule 11 (instruction -> CONTINUE ; .)


state 27

    (12) instruction -> BREAK ; .
    {               reduce using rule 12 (instruction -> BREAK ; .)
    CONTINUE        reduce using rule 12 (instruction -> BREAK ; .)
    BREAK           reduce using rule 12 (instruction -> BREAK ; .)
    PRINT           reduce using rule 12 (instruction -> BREAK ; .)
    WHILE           reduce using rule 12 (instruction -> BREAK ; .)
    FOR             reduce using rule 12 (instruction -> BREAK ; .)
    RETURN          reduce using rule 12 (instruction -> BREAK ; .)
    IF              reduce using rule 12 (instruction -> BREAK ; .)
    ID              reduce using rule 12 (instruction -> BREAK ; .)
    $end            reduce using rule 12 (instruction -> BREAK ; .)
    }               reduce using rule 12 (instruction -> BREAK ; .)
    ELSE            reduce using rule 12 (instruction -> BREAK ; .)


state 28

    (13) instruction -> return_i ; .
    {               reduce using rule 13 (instruction -> return_i ; .)
    CONTINUE        reduce using rule 13 (instruction -> return_i ; .)
    BREAK           reduce using rule 13 (instruction -> return_i ; .)
    PRINT           reduce using rule 13 (instruction -> return_i ; .)
    WHILE           reduce using rule 13 (instruction -> return_i ; .)
    FOR             reduce using rule 13 (instruction -> return_i ; .)
    RETURN          reduce using rule 13 (instruction -> return_i ; .)
    IF              reduce using rule 13 (instruction -> return_i ; .)
    ID              reduce using rule 13 (instruction -> return_i ; .)
    $end            reduce using rule 13 (instruction -> return_i ; .)
    }               reduce using rule 13 (instruction -> return_i ; .)
    ELSE            reduce using rule 13 (instruction -> return_i ; .)


state 29

    (21) print_i -> PRINT printargs .
    ;               reduce using rule 21 (print_i -> PRINT printargs .)


state 30

    (22) printargs -> expr .
    (23) printargs -> expr . , printargs
    (26) expr -> expr . DOTMINUS expr
    (27) expr -> expr . DOTPLUS expr
    (28) expr -> expr . DOTDIVIDE expr
    (29) expr -> expr . DOTTIMES expr
    (30) expr -> expr . GE expr
    (31) expr -> expr . LE expr
    (32) expr -> expr . GT expr
    (33) expr -> expr . LT expr
    (34) expr -> expr . NE expr
    (35) expr -> expr . EQ expr
    (36) expr -> expr . / expr
    (37) expr -> expr . * expr
    (38) expr -> expr . - expr
    (39) expr -> expr . + expr
    (40) expr -> expr . '
    ;               reduce using rule 22 (printargs -> expr .)
    ,               shift and go to state 54
    DOTMINUS        shift and go to state 55
    DOTPLUS         shift and go to state 56
    DOTDIVIDE       shift and go to state 57
    DOTTIMES        shift and go to state 58
    GE              shift and go to state 59
    LE              shift and go to state 60
    GT              shift and go to state 61
    LT              shift and go to state 62
    NE              shift and go to state 63
    EQ              shift and go to state 64
    /               shift and go to state 65
    *               shift and go to state 66
    -               shift and go to state 67
    +               shift and go to state 68
    '               shift and go to state 69


state 31

    (24) expr -> mat_fun . ( expr )
    (               shift and go to state 70


state 32

    (45) expr -> ( . expr )
    (24) expr -> . mat_fun ( expr )
    (25) expr -> . matrix
    (26) expr -> . expr DOTMINUS expr
    (27) expr -> . expr DOTPLUS expr
    (28) expr -> . expr DOTDIVIDE expr
    (29) expr -> . expr DOTTIMES expr
    (30) expr -> . expr GE expr
    (31) expr -> . expr LE expr
    (32) expr -> . expr GT expr
    (33) expr -> . expr LT expr
    (34) expr -> . expr NE expr
    (35) expr -> . expr EQ expr
    (36) expr -> . expr / expr
    (37) expr -> . expr * expr
    (38) expr -> . expr - expr
    (39) expr -> . expr + expr
    (40) expr -> . expr '
    (41) expr -> . - expr
    (42) expr -> . STRING
    (43) expr -> . FLOAT
    (44) expr -> . INT
    (45) expr -> . ( expr )
    (46) expr -> . var
    (62) mat_fun -> . ONES
    (63) mat_fun -> . EYE
    (64) mat_fun -> . ZEROS
    (55) matrix -> . [ vectors ]
    (47) var -> . lists
    (48) var -> . ID
    (49) lists -> . ID [ expr , expr ]
    -               shift and go to state 34
    STRING          shift and go to state 35
    FLOAT           shift and go to state 36
    INT             shift and go to state 37
    (               shift and go to state 32
    ONES            shift and go to state 39
    EYE             shift and go to state 40
    ZEROS           shift and go to state 41
    [               shift and go to state 42
    ID              shift and go to state 18

    expr                           shift and go to state 71
    mat_fun                        shift and go to state 31
    matrix                         shift and go to state 33
    var                            shift and go to state 38
    lists                          shift and go to state 21

state 33

    (25) expr -> matrix .
    ,               reduce using rule 25 (expr -> matrix .)
    DOTMINUS        reduce using rule 25 (expr -> matrix .)
    DOTPLUS         reduce using rule 25 (expr -> matrix .)
    DOTDIVIDE       reduce using rule 25 (expr -> matrix .)
    DOTTIMES        reduce using rule 25 (expr -> matrix .)
    GE              reduce using rule 25 (expr -> matrix .)
    LE              reduce using rule 25 (expr -> matrix .)
    GT              reduce using rule 25 (expr -> matrix .)
    LT              reduce using rule 25 (expr -> matrix .)
    NE              reduce using rule 25 (expr -> matrix .)
    EQ              reduce using rule 25 (expr -> matrix .)
    /               reduce using rule 25 (expr -> matrix .)
    *               reduce using rule 25 (expr -> matrix .)
    -               reduce using rule 25 (expr -> matrix .)
    +               reduce using rule 25 (expr -> matrix .)
    '               reduce using rule 25 (expr -> matrix .)
    ;               reduce using rule 25 (expr -> matrix .)
    )               reduce using rule 25 (expr -> matrix .)
    ]               reduce using rule 25 (expr -> matrix .)
    :               reduce using rule 25 (expr -> matrix .)
    {               reduce using rule 25 (expr -> matrix .)
    CONTINUE        reduce using rule 25 (expr -> matrix .)
    BREAK           reduce using rule 25 (expr -> matrix .)
    PRINT           reduce using rule 25 (expr -> matrix .)
